# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xgYXjLAwivxwlwM4uXzoo1QmUbvVYhpX0zaW3GCSnoXM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1JwRr6zq0JIF9dlGPdFXr1CdkUPs3wfPV7JopyHd8QK4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1soAg2ZhxuC6mov_HrYjsIKfCcRkUShMZI6gRachTEu8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xT0dxgnadNtD9h86kNZ81fzKzkp42bHNtBugoook-_S4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1gcCIDMsZN4z7SdjNHKIH340AffWZMTUqMhYvLNJAk20=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1EKt5-3rhGIHqN9ZpQuUfVo49c6Fz0kM_ZC8NDGZ50eM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1ePhU5BT0DGYLoo8ZJ3CoSBqegZXOu8jup4ASHZo8lA4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT266V2n9NlToU6dhOfU3Wkd21JDgUhzh9NZnwhLhKBOXg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT26GmnP5fvidIKpF2LV55K2NYVCNMQpLtVNbs4HpJkAmk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Phe1cDqJ-OP2rGpUM3moOjnERoJdGkylJ22wwGBGjOw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2TE-Y70cn6hvhVpjSRSkJVHUyHuNEVhffXBJaf_KPRZs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2WdcgnOcp8gDvMM0BF6pO2kqdFJTL9ygITcYuCucSTWk=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1Vdebp9A_h4oct-J1OrM8UZRoMTOxBBPaY4sXwlopJI4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1Vp37ZnmSzdkSzGLmF8U_BRcO3DLjRWjlhRdlHBcdRy8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1X539x_YT1lUK2oDu2Nr3Hu3aegUDOp0FLNtTYu4pgTA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1qy4GaE8vLc4GygpI3KCK7cC5phm6lvAnVkXu7bFX4rQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1wBc5_2yw5qQSTxeGsVMyApNGBniUa8S3hqZ0XpVShs4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1wfWCWygS9J9eDQguZhtSQzaCylUPp4KGn4ckHlgrWQ0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1m4FHoYA0-PQVUGU-PpUGTfvtHTbUl1ufWZPIqLDvUbA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64MQMlVx3bpbjm1G81aI3aOvIv4ojDLE-r9QE-qEoOtcs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64e75Dum27efqzFz0hW_i4D82NXZTbOivzcFmVp20DIbk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1-Xhswr7z1pxjrzZx4tj6Jf7LZ3YRLgejyMoqlosH6_k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x12GtUm5r0cDk1-a2jeks-kZNU-7Y5MvkrGW_Vju9xnPU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1JVm-roDFKCUzlfKWE1rkVpvW7Y894KyUj7UCxRD0b-g=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_PD9k_fjk_keOrVqIi5LzdT1EHNN2mkg1H8zK6h8Yb0o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_Wrwiom3OHnhYazfQjh20iZ6DSSRn-DgEW7MXA1dAebI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_kP4UZ6ibU3HUOstrunos8nIDoZhDcB5rLj5VdQK6xJY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32L2U-baoDuKa8etXjxeCOMf56CxxajRfXMlFGbDJZjwE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32U8XlT4LiYps4hrj_Kcif8O9RKw5j0uhgXiWdmIRAJQI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32VgqTJwafRAbCQityiVKcOMgZwEYEtEKIuKxFzqKIcEc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32DqM-7Kze2pU1ANmWdgf8mN0qRIeWZRh5PjkQCWJHI-0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32x2AuWUinTCvkSvUOa6nQro6k0BLJuM73dcVmwkIhKwEc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xFF57cUgMJZw8L_rHfLtdBU46D_fZF1O_rLctY1ir_4s=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT11jGjtVR6jHwOUvPjW4ZQ46_sA0SufaIxYVYdkzNr_-s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT17pnMLvcLfUEsw8Nipk98JMYGjjv5tSBfo_Ywy765wDc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT18dCH7m1r2fjWMonDl095dtICNy_WtGOrGKHGs69pP4Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1AHkrk_wwAZbeT3YFCgw4yKAFOpYR1ztnDd-SzTTzErs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1Gmo-KE7KJtx21P0tv3OcaGDVPCQUbyPZLh1seqFQOI0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1RGRQ6IjmyHjRRzqX7cjuMtG_LQ3jt--8VDTgHcsa3WU=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1-BOU_PYWNt28BnEQlZ8VY8_ZK1EbIxomQKGNJBAZ5Js=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1DaTTZ_MeLEClLM85AQA4lailqm5C3bJQ7i-QUQ30Rus=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT33Q1rtLoIUqussOfm5KJbUieOjDp5C2258SF2QjNBOSk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3pSe4Y8x61U_QtiuGoRF0hZNstWGvoyia7OjkPijs3KQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4TxSo39jhc-IG1lapJKrqrDq-rNdCSebrxWPQjYToyBo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4tmaSaEfWjB1paKRZHSNzEmjTWjI0lIdm8Qk-wWYEKwk=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x164MxouoyCOkSMVeI4-6iQcjd-BA5hcPwH1ealEW21p4g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16lVmM8TP2-Di4q8hfvMld0f3vQsxVQHFD81TF9QTqHTQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16TybM4dYsJFbUIYaP1DOaWInlgG6mAlWroTukI6xMGkQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16GgOWNbISbmQSQKdvOVSHXgzNfxaeN7ffBQgtNELNTPg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16bioNxKu4qVjtJgxP3xR-6bWrky6Mz-e88RIXWzr1Gxk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x167I7mgwx4Zzy_44klYok9mOpZeyzmB4Tong2lMGy6sMY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16xRwbQwvkt4udwoALCb_E8N9WDQF5ZD5wxGP253PtJrY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x168ehHe_eIUG13YSB6e8KjXcwXYy-AuazATIkTczAF4io=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16J5VizHnlyclOmlJb8tYXpNHxFgIEdfbiclYK4PphClA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16-KF1qbDEwsdrVzssdeEuQMyV5DvB8m1zyBNfCLHahww=',
      'err': 0,
    }),
  ])
# ---
